@@ -1498,10 +1498,10 @@ encoding: Unknown encoding~
 ###############################################
 # Page: includes/menu/index.php
 #
-My Page: My Page
 This Week: This Week
 This Month: This Month
 This Year: This Year
+Exit: Exit
 Add New Event: Add New Event
 Delete Entries: Delete Entries
 Another User\'s Calendar: Another User\'s Calendar
